# tk

./: .gitattributes  .gitignore  .mise.toml  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  Cargo.toml  LICENSE  Makefile  README.md  build.zig  build.zig.zon  rust-toolchain.toml  typos.toml  zls.json
.agents/skills/tk-changelog/: SKILL.md
.agents/skills/tk-release/: SKILL.md
.agents/skills/tk-version-bump/: SKILL.md
.claude/: settings.json
.codex/: hooks.json
.github/workflows/: ci.yml  release.yml  rust-ci.yml
.pi/extensions/: package-lock.json  package.json  tk-prime.ts
crates/tk/: Cargo.toml  build.rs
crates/tk/src/: cli.rs  clock.rs  lib.rs  main.rs  messages.rs  platform.rs  proc.rs  rng.rs  sync.rs
crates/tk/src/commands/: accept.rs  add.rs  adopt.rs  block.rs  done.rs  grep.rs  init.rs  item_header.rs  item_row.rs  lifecycle.rs  list.rs  manpage.rs  message.rs  mod.rs  next.rs  park.rs  prime.md  prime.rs  promote.rs  remote.rs  resolver.rs  scope.rs  search.rs  self_update.rs  show.rs  start.rs  stop.rs  sync.rs  tk.1  unblock.rs  unpark.rs  update.rs  worktree.rs
crates/tk/src/domain/: apply_outcome.rs  backend_item_snapshot.rs  backend_kind.rs  item_class.rs  mod.rs  mutation_payload.rs  mutation_state.rs  mutation_type.rs  mutation_view.rs  origin.rs  outcome.rs  priority.rs  selection_state.rs  status.rs  ticket_kind.rs
crates/tk/src/git/: discovery.rs  mod.rs
crates/tk/src/remote/: adapter.rs  factory.rs  fake.rs  github.rs  mod.rs
crates/tk/src/render/: highlight.rs  mod.rs  palette.rs  sanitize.rs  styler.rs
crates/tk/src/store/: display_prefix.rs  migrations.rs  mod.rs  mutations.rs  sequences.rs  sql_value.rs  sync.rs  testing.rs
crates/tk/src/store/migrations/: 001_repository_store.sql  003_closing_reason.sql  004_selection_state.sql  005_relax_priority_for_triage.sql  006_require_accepted_for_active.sql
crates/tk/src/store/repository/: create.rs  dependency.rs  grep.rs  list.rs  mod.rs  next.rs  search.rs  selection.rs  show.rs  status.rs  update.rs
crates/tk/src/worktree/: mod.rs  scope.rs
crates/tk/tests/: concurrency.rs  scenarios.rs
crates/tk/tests/snapshots/: scenarios__help_accept.snap  scenarios__help_add.snap  scenarios__help_block.snap  scenarios__help_done.snap  scenarios__help_grep.snap  scenarios__help_list.snap  scenarios__help_next.snap  scenarios__help_park.snap  scenarios__help_search.snap  scenarios__help_show.snap  scenarios__help_unblock.snap  scenarios__help_unpark.snap  scenarios__help_update.snap  scenarios__help_worktree.snap
docs/: cli.md  design-questions.md  followups.md  implementation.md  prime.md
docs/adr/: 0001-untracked-repository-store.md  0002-local-by-default-ticket-creation.md  0003-use-current-state-store-with-mutation-outbox.md  0004-use-zig-0-16-for-the-first-implementation.md  0005-use-sqlite-for-the-repository-store.md  0006-done-is-terminal-in-v1.md  0007-default-worktree-path-layout.md  0008-keep-implementation-doc-compact.md  0009-sync-failure-taxonomy.md  0010-pull-merge-skips-items-with-pending-mutations.md  0011-single-host-cross-compile-release.md  0012-linkage-policy-per-release-triple.md  0013-distribute-via-curl-and-self-update-without-signing.md  0014-comptime-style-emitter-with-runtime-policy.md  0015-tk-next-orders-by-effective-priority.md  0016-mutation-failure-is-a-flat-classified-record.md  0017-keep-message-constants-verbatim.md  0018-rust-rewrite-preserves-contracts-ports-idiomatically.md  0019-rust-rewrite-proceeds-zig-main-frozen-as-oracle.md  0020-prime-prints-only-when-store-initialized.md  0021-github-adapter-syncs-title-body-status-only.md  0022-scope-is-an-explicit-epic-argument-not-persisted-state.md  0023-closing-reason-is-a-local-field-not-a-comment.md  0024-auto-apply-forward-migrations-on-open.md  0025-tk-search-is-title-only-item-lookup.md  0026-tk-grep-is-regex-content-search-with-show-context.md  0027-selection-state-is-a-local-ticket-only-field.md  0028-schema-check-changes-use-a-foreign-keys-off-table-rebuild.md  0029-active-implies-accepted-is-a-check-not-a-trigger.md  0030-immutable-releases-via-draft-publish-with-tag-carried-changelog.md  0031-scenarios-exercise-real-subprocesses-fakes-live-in-unit-tests.md  0032-command-diagnostics-framed-at-the-dispatch-seam.md  0033-tk-remote-defers-repo-and-namespace-to-the-adapter.md  0034-sync-is-an-opt-in-working-set-not-a-backend-mirror.md
docs/spikes/: gh-cli-issue-behavior.md
man/: tk.1
scripts/: install.ps1  install.sh  smoke.sh
src/: cli.zig  clock.zig  embed.zig  main.zig  messages.zig  platform.zig  test_root.zig
src/commands/: add.zig  block.zig  done.zig  init.zig  list.zig  manpage.zig  message.zig  next.zig  output.zig  parse_diagnostic.zig  prime.md  prime.zig  remote.zig  resolver.zig  self_update.zig  show.zig  start.zig  stop.zig  sync.zig  unblock.zig  update.zig  worktree.zig
src/domain/: backend_item_snapshot.zig  diagnostic.zig  display_prefix.zig  item_class.zig  mutation_payload.zig  mutation_type.zig  mutation_view.zig  origin.zig  outcome.zig  priority.zig  status.zig  ticket_kind.zig
src/git/: discovery.zig
src/http/: client.zig  fake.zig
src/proc/: fake.zig  runner.zig
src/remote/: adapter.zig  factory.zig  fake.zig
src/render/: palette.zig  sanitize.zig  style.zig  styler.zig
src/store/: diagnostic.zig  migrations.zig  mutations.zig  repository.zig  sequences.zig  sqlite.zig  sync.zig
src/store/migrations/: 001_repository_store.sql  002_items_no_escape_from_done.sql
src/sync/: engine.zig  log.zig
src/testing/: arg_iter.zig  deps.zig  platform.zig  scenarios.zig  script.zig  smoke.zig  test_cli.zig  tmp_store.zig  txtar.zig
src/testing/scenarios/_harness/: preserve_sections.txtar
src/testing/scenarios/add/: create_epic_child.txtar
src/testing/scenarios/block/: help.txtar
src/testing/scenarios/done/: help.txtar
src/testing/scenarios/init/: init_fresh.txtar  init_idempotent.txtar
src/testing/scenarios/list/: help.txtar
src/testing/scenarios/manpage/: basic.txtar
src/testing/scenarios/next/: help.txtar
src/worktree/: scope.zig
(+5 files in other folders)
