[workspace]
resolver = "3"
members = ["crates/tk"]

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/lithammer/tk"

# Slice 0 ratifies the lint posture for every downstream slice. `pedantic` is
# enabled from day one (cheap on greenfield, expensive to retrofit) per
# ADR-0018. The allow-list below is the slice-0 working draft discovered while
# porting `tk init`; tk-83 promotes the levels to `deny` so `cargo clippy` (and
# `cargo build` for `[lints.rust]`) hard-fails locally and in CI without needing
# a `-D warnings` flag on the command line.
#
# `nursery` and `restriction` are excluded as groups: `nursery` ships WIP lints,
# `restriction` contains mutually-contradictory rules. Pull individual lints
# from either only when specifically motivated.
[workspace.lints.rust]
unsafe_code = "forbid"
# Catches the default-warn rustc lints (unused imports, dead code, …) that
# `-D warnings` used to convert into errors.
warnings = { level = "deny", priority = -1 }

[workspace.lints.clippy]
# `all` is the umbrella for default-warn clippy lints (correctness, suspicious,
# style, complexity, perf); `pedantic` is opt-in on top.
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# tk's domain-qualified names (Repository Store, Workspace Scope, Display ID)
# produce types like `store::Store`, `mutation::Mutation`. Renaming for the
# lint would erase the vocabulary that CONTEXT.md keeps in lockstep.
module_name_repetitions = "allow"

# Doc comments anchor in CONTEXT.md prose — "Repository Store", "Display ID",
# "Workspace Scope" appear constantly and are vocabulary, not code symbols.
# Backticking each occurrence would noisy them up without aiding navigation.
doc_markdown = "allow"

# Typed errors in slice 0 are already `thiserror`-annotated; the function-level
# `# Errors` section duplicates the `#[error("…")]` strings. Same for
# `# Panics`: command-side stderr (ADR-0017) is the user-facing failure
# contract, and library panics are reserved for truly unreachable invariants
# documented inline. Revisit if we expose tk as a library to third parties.
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Style: a nested `if` reads better than `if a && b` when each predicate has
# its own paragraph of justification or when one of the inner branches grows
# during a later slice.
collapsible_if = "allow"
collapsible_else_if = "allow"

# Command handlers (and the scenario script executor) are intentionally
# straight-line — each top-level step of `tk init` (discovery, classify,
# pragmas, migrations, seed, render) is one block in one function. Splitting
# for the 100-line cap forces an arbitrary boundary that hurts readability
# more than it helps; the slice 0 idiom is to keep command pipelines together.
too_many_lines = "allow"

# Domain names occasionally collide with their plural / shortened forms
# (`argv` vs `args`, `Cli` vs `cli`, `Args` vs `args`). Renaming for the
# lint forces less expressive identifiers.
similar_names = "allow"

[profile.release]
# Single static binary is part of the distribution contract (ADR-0011/0012);
# LTO + strip keep the `cargo-zigbuild` release artifacts slim.
lto = "thin"
strip = "symbols"
codegen-units = 1
