[package]
name = "tk"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent-first, repository-local work tracker with pluggable issue-tracker backends"

[[bin]]
name = "tk"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# clap (derive API) owns top-level dispatch and per-command help.
# ADR-0018 pins this as the dispatch idiom.
clap = { version = "4", features = ["derive"] }

# Styled output: anstyle defines the palette of named `Style` constants
# (ADR-0014); anstream::AutoStream wraps the real stdout/stderr so the
# resolved policy gates SGR codes the styler emits. anstyle's universal
# `Reset` is intentionally NOT used for our own spans — see the
# family-specific close logic in `render::styler` for the ADR-0014
# disjoint-family invariant.
#
# The `wincon` default feature is dropped: tk emits SGR only and would
# never use the wincon SGR → Win32-console-API translation path.
# Instead, `anstyle-query` is pulled directly so `resolve_styler_from_env`
# can call `enable_ansi_colors()` on Windows and downgrade legacy
# (pre-VT) consoles to plain output, matching ADR-0014's "legacy
# console → no-color" arm.
anstyle = "1"
anstream = { version = "1", default-features = false, features = ["auto"] }
anstyle-query = "1"

# rusqlite with `bundled` keeps the single-static-binary contract (ADR-0011).
# We compile SQLite from source via `cargo-zigbuild` later; the bundled feature
# vendors the amalgamation so no system libsqlite is required.
rusqlite = { version = "0.32", features = ["bundled"] }

# thiserror covers the typed domain/store/sync layers. anyhow/eyre/color-eyre
# are declined per ADR-0018 — tk owns its curated stderr contract.
thiserror = "1"

# jiff is the date/time library; Andrew Gallant's Temporal-inspired API. tk
# uses `Timestamp::parse`, `from_millisecond`, and `strftime` only — no
# timezone resolution, no zoneinfo lookups. Trim the default `tz-*` /
# `tzdb-*` features so we don't bundle hundreds of KB of IANA tzdb into the
# static binary (ADR-0011 wants slim release artifacts).
jiff = { version = "0.2", default-features = false, features = ["std"] }

# RNG. tk init doesn't draw randomness; first consumers are `tk add` (internal
# IDs), `tk self-update` / `tk manpage` (stage_name suffix), and `tk sync`.
# The trait shape callers inherit is `&mut dyn Rng` (the dyn-compatible
# low-level trait); production seeds `StdRng`
# from OS entropy (`SysRng`) and tests inject a seeded `StdRng` via `Deps`. The
# `thread_rng` default feature is dropped — tk dispatch is single-threaded and
# consumes `StdRng` directly from `Deps`.
rand = { version = "0.10", default-features = false, features = ["std", "std_rng", "sys_rng"] }

# Mutation Log payloads serialize into the `mutations.payload_json` column,
# which carries `check(json_valid(payload_json))`. Free-text titles, bodies,
# and external blocker reasons demand a real JSON encoder rather than a
# `format!`-style hand-roll. Derives sit on the per-variant payload structs
# (TitleBody, EpicRef, …) so the on-disk shape stays flat — one object per
# row — which keeps the Backend Adapter (tk-97) reading the same shape the
# store writes.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# `tk grep` matches a user-supplied regular expression per line in Rust
# (ADR-0026). Default features are trimmed the jiff/rand way (ADR-0011 wants a
# slim static binary): keep `unicode-case` so a future `-i` / `(?i)` does full
# Unicode case folding, `unicode-perl` so `\b` / `\w` stay Unicode-aware, and
# `perf-literal` for the aho-corasick/memchr literal prefilter; drop the large
# `unicode-age` / `gencat` / `script` / `segment` tables tk never queries.
regex = { version = "1", default-features = false, features = ["std", "perf-literal", "unicode-case", "unicode-perl"] }

[dev-dependencies]
tempfile = "3"
# CLI scenario harness: assert_cmd runs the built `tk` binary, insta captures
# stdout/stderr/exit (inline for behavioural scenarios, file snapshots for the
# clap-generated `--help` contract), and shlex splits the command strings.
assert_cmd = "2"
# `filters` enables regex redaction (the init refusal surfaces git's
# environment-variable stderr).
insta = { version = "1", features = ["filters"] }
shlex = "1"
